--- a/conf/default.conf
+++ b/conf/default.conf
@@ -17,7 +17,7 @@ server {
         root ./www;
         index index.html;
         autoindex on;
-        upload_store ./uploads;
+        upload_store ./www/uploads;
         cgi_ext .php .py;
     }
 }
