Revert "Implementation of logger depencies in all classes removing debug logs using std::cout for _logger"

--- a/.gitignore
+++ b/.gitignore
@@ -33,14 +33,6 @@
 webserv
 debugme
 
-# Editors and IDEs 
-.vscode/
-*.swp
-tags
-
-# 42 Intelectual Property
-*subject*
-
-# Uploaded files
-www/uploads/*
-
+# Local environment files
+.vscode
+*.pdf
