--- a/conf/default.conf
+++ b/conf/default.conf
@@ -18,6 +18,6 @@ server {
         index index.html;
         autoindex on;
         upload_store ./www/uploads;
-        cgi_ext .php .py;
+        cgi_extension .php .py;
     }
 }
