fix: correct redirect parsing to use destination URL instead of status code
- Fixed Config.cpp to parse tokens[2] (destination URL) instead of tokens[1] (status code) for return directives
- Updated default.conf with comprehensive route configuration including redirects
- Removed obsolete test files (www/test.php, www/test.py)
- Added project documentation in CLAUDE.md

Redirect routes now work correctly:
- /old-site/ → / (301)
- /legacy/ → /index.html (301)

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,4 +1,4 @@
-# Default WebServ configuration
+# Default WebServ configuration with multiple routes
 
 server {
     listen 8080;
@@ -11,7 +11,70 @@ server {
     # Client body size limit (10MB)
     client_max_body_size 10M;
     
-    # Root location
+    # Static content routes
+    location /images/ {
+        method GET;
+        root ./www;
+        autoindex on;
+    }
+    
+    location /static/ {
+        method GET;
+        root ./www;
+        autoindex on;
+    }
+    
+    # Upload handling route
+    location /upload/ {
+        method GET POST;
+        root ./www;
+        index upload.html;
+        autoindex off;
+        upload_store ./www/uploads;
+    }
+    
+    # CGI processing route
+    location /cgi/ {
+        method GET POST;
+        root ./www;
+        autoindex off;
+        cgi_ext .py;
+    }
+    
+    # API endpoints (CGI only)
+    location /api/ {
+        method GET POST;
+        root ./www;
+        autoindex off;
+        cgi_ext .py;
+    }
+    
+    # File management route
+    location /files/ {
+        method GET DELETE;
+        root ./www;
+        autoindex on;
+    }
+    
+    # Admin route (restricted)
+    location /admin/ {
+        method DELETE;
+        root ./www;
+        autoindex on;
+    }
+    
+    # Redirect routes
+    location /old-site/ {
+        root ./www;
+        return 301 /;
+    }
+    
+    location /legacy/ {
+        root ./www;
+        return 301 /index.html;
+    }
+    
+    # Root location (catch-all)
     location / {
         method GET POST DELETE;
         root ./www;
