--- a/conf/eval.conf
+++ b/conf/eval.conf
@@ -1,4 +1,4 @@
-# Default WebServ configuration
+# Multiple hosts configuration
 
 server {
     listen 8080;
@@ -22,33 +22,9 @@ server {
     }
 }
 
-
-server {
-    listen 8000;
-    server_name localhost;
-    
-    # Default error pages
-    error_page 404 /404.html;
-    error_page 500 502 503 504 /50x.html;
-    
-    # Client body size limit (10MB)
-    client_max_body_size 10M;
-    
-    # Root location
-    location / {
-        method GET POST DELETE;
-        root ./www;
-        index index.html;
-        autoindex on;
-        upload_store ./www/uploads;
-        cgi_ext .php .py;
-    }
-}
-
-
 server {
     listen 3000;
-    server_name localhost;
+    server_name naruto.com;
     
     # Default error pages
     error_page 404 /404.html;
@@ -68,25 +44,3 @@ server {
     }
 }
 
-
-server {
-    listen 3030;
-    server_name localhost;
-    
-    # Default error pages
-    error_page 404 /404.html;
-    error_page 500 502 503 504 /50x.html;
-    
-    # Client body size limit (10MB)
-    client_max_body_size 10M;
-    
-    # Root location
-    location / {
-        method GET POST DELETE;
-        root ./www;
-        index index.html;
-        autoindex on;
-        upload_store ./www/uploads;
-        cgi_ext .php .py;
-    }
-}
