--- a/conf/eval.conf
+++ b/conf/eval.conf
@@ -1,27 +1,4 @@
-# Default WebServ configuration
-
-server {
-    listen 8080;
-    server_name localhost;
-    
-    # Default error pages
-    error_page 404 /404.html;
-    error_page 500 502 503 504 /50x.html;
-    
-    # Client body size limit (10MB)
-    client_max_body_size 10M;
-    
-    # Root location
-    location / {
-        method GET POST DELETE;
-        root ./www;
-        index index.html;
-        autoindex on;
-        upload_store ./www/uploads;
-        cgi_ext .php .py;
-    }
-}
-
+# Eval WebServ configuration
 
 server {
     listen 8000;
@@ -45,9 +22,8 @@ server {
     }
 }
 
-
 server {
-    listen 3000;
+    listen 8000;
     server_name localhost;
     
     # Default error pages
@@ -58,6 +34,47 @@ server {
     client_max_body_size 10M;
     
     # Root location
+    location / {
+        method GET POST DELETE;
+        root ./www;
+        index index.html;
+        autoindex on;
+        upload_store ./www/uploads;
+        cgi_ext .php .py;
+    }
+}
+
+server {
+    listen 8080;
+    server_name localhost;
+    
+    # Default error pages
+    error_page 404 /404.html;
+    error_page 500 502 503 504 /50x.html;
+    
+    # Client body size limit (10MB)
+    client_max_body_size 10M;
+    
+    # Root location
+    location / {
+        method GET POST DELETE;
+        root ./www;
+        index index.html;
+        autoindex on;
+        upload_store ./www/uploads;
+        cgi_ext .php .py;
+    }
+}
+
+server {
+    listen 3000;
+    server_name naruto.com;
+
+    error_page 404 /404.html;
+    error_page 500 502 503 504 /50x.html;
+
+    client_max_body_size 10M;
+
     location / {
         method GET POST DELETE;
         root ./www;
