feat: add comprehensive virtual hosting test infrastructure
- Create complete virtual hosting test setup with naruto.com:3001 and sasuke.com:3002
- Add separate document roots for each virtual host in www-vhosts/ directory
- Update eval.conf with third server block for sasuke.com virtual host
- Enhance test_diff_hostnames.sh with 9 comprehensive tests and color output
- Add test_virtual_hosting_comprehensive.sh with advanced test suite (19 tests)
- Create unique content and styling for each virtual host (naruto.com, sasuke.com, localhost)
- Add VIRTUAL_HOSTING_SETUP.md documentation with usage instructions
- Validate Config::findServer() hostname-based routing functionality
- Test static asset serving, content differentiation, and HTTP compliance

--- a/conf/eval.conf
+++ b/conf/eval.conf
@@ -14,7 +14,7 @@ server {
     # Root location
     location / {
         method GET POST DELETE;
-        root ./www;
+        root ./www-vhosts/localhost;
         index index.html;
         autoindex on;
         upload_store ./www/uploads;
@@ -23,7 +23,7 @@ server {
 }
 
 server {
-    listen 3000;
+    listen 3001;
     server_name naruto.com;
     
     # Default error pages
@@ -36,7 +36,29 @@ server {
     # Root location
     location / {
         method GET POST DELETE;
-        root ./www;
+        root ./www-vhosts/naruto.com;
+        index index.html;
+        autoindex on;
+        upload_store ./www/uploads;
+        cgi_ext .php .py;
+    }
+}
+
+server {
+    listen 3002;
+    server_name sasuke.com;
+    
+    # Default error pages
+    error_page 404 /404.html;
+    error_page 500 502 503 504 /50x.html;
+    
+    # Client body size limit (10MB)
+    client_max_body_size 10M;
+    
+    # Root location
+    location / {
+        method GET POST DELETE;
+        root ./www-vhosts/sasuke.com;
         index index.html;
         autoindex on;
         upload_store ./www/uploads;
